Pallets events, errors, and dispatchables
